--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.ambulance" >
-
+<uses-permission android:name="android.permission.HIGH_SAMPLING_RATE_SENSORS"/>
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,6 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AMBULANCE"
         tools:targetApi="31" >
+
         <activity
             android:name=".ExampleAccelerationActivity"
             android:exported="false" />
